# stav

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  ai-stakeholders.drawio  catalog-v001.xml  odrl-account.ttl  pyproject.toml  setup.py  stav-eu-aia.ttl  stav-th-aisbd.ttl  stav-us-aaa.ttl  stav.ttl  test-parse.ipynb  แบบแผนที่ยังไม่ได้ตั้งชื่อ.drawio
.github/workflows/: pypi-publish.yml
docs/: .htaccess  index-en.html  index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
docs/OOPSevaluation/: oopsEval.html
docs/sections/: abstract-en.html  crossref-en.html  description-en.html  introduction-en.html  overview-en.html
docs/webvowl/data/: ontology.json
notebooks/: mlflowstav.ipynb  use_instruction.txt
presentations/: ai-accountability-taxonomy-arthit-oss-na-20240416.pptx
src/stav/: __about__.py  __init__.py  _registry.py  term.py
src/stav/codegen/: __init__.py  emitter.py  generate.py  grouper.py  model.py  namespace.py
src/stav/codegen/parsers/: __init__.py  csv_parser.py  jsonld_parser.py  ttl_parser.py  yaml_parser.py
src/stav/eu/: __init__.py
src/stav/eu/aia/: __init__.py
src/stav/vocab/: __init__.py
src/stav/vocab/dpv/: __init__.py  _core.py  ai.py
src/stav/vocab/eu/: __init__.py  aia.py
src/stav/vocab/spdx/: __init__.py  ai.py  build.py  core.py  dataset.py  expanded_licensing.py  extension.py  security.py  simple_licensing.py  software.py
stav/: __init__.py
stav/eu/: __init__.py
stav/eu/aia/: __init__.py
tests/: __init__.py
tools/: ttltopy.ipynb
tools/recipes/: dpv_ai.json  dpv_core.json  spdx_ai.json  spdx_build.json  spdx_core.json  spdx_dataset.json  spdx_expanded_licensing.json  spdx_extension.json  spdx_security.json  spdx_simple_licensing.json  spdx_software.json  stav_eu_ai.json
